Fix template size and position on small screens

--- a/assets/css/hd-ssi-admin.css
+++ b/assets/css/hd-ssi-admin.css
@@ -1,3 +1,17 @@
+.hd-ssi-template-preview .ssi-template {
+	--ssi--template--scale: 1;
+}
+
+@media screen and (min-width: 1000px) {
+	
+	.hd-ssi-template-preview .ssi-template {
+	
+		--ssi--template--scale: 0.7;
+		
+	}
+
+}
+
 img.ssi-image {
 	width: 400px;
 	height: 210px;
@@ -128,6 +142,8 @@ input[type=text].hd-ssi-input--license-invalid {
 	
 	position: relative;
 	max-width: var(--ssi--template--width);
+	display: flex;
+	justify-content: flex-start;
 
 }
 
@@ -136,24 +152,35 @@ input[type=text].hd-ssi-input--license-invalid {
 	.hd-ssi-template-preview  {
 		
 		position: fixed;
-		bottom: 3em;
-		right: 2em;
+		bottom: 5em;
+		right: 3em;
 
 	}
 
 }
 
 .hd-ssi-template-preview__size-toggle {
-	position: absolute;
-	bottom: -.75em;
-	right: -.75em;
-	appearance: none;
-	border: none;
-	width: 1.5em;
-	height: 1.5em;
-	border-radius: 50%;
-	font-size: 2em;
-	cursor: pointer;
+	display: none;
+
+}
+
+@media screen and (min-width: 1000px) {
+		
+	.hd-ssi-template-preview__size-toggle {
+		display: block;
+		position: absolute;
+		bottom: -.75em;
+		right: -.75em;
+		appearance: none;
+		border: none;
+		width: 1.5em;
+		height: 1.5em;
+		border-radius: 50%;
+		font-size: 2em;
+		cursor: pointer;
+	
+	}
+
 }
 
 .hd-ssi-template-preview .ssi-template {
